<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ppiuk-url-redirect</groupId>
    <artifactId>ppiuk-urls</artifactId>
    <packaging>jar</packaging>
    <version>1.0-SNAPSHOT</version>
    <description>PPI UK - URL redirect project</description>

    <properties>
        <surefire.fork.count>10</surefire.fork.count>
        <driverType>firefox</driverType>
        <chromeDriverPath>\src\main\resources\drivers\chromedriver.exe</chromeDriverPath>
        <ieDriverPath>\src\main\resources\drivers\IEDriverServer.exe</ieDriverPath>
        <browserStackLocal>\src\main\resources\BrowserStackLocal.exe</browserStackLocal>
        <sonar.projectName>PLPlus UK - URL redirect</sonar.projectName>
        <sonar.language>java</sonar.language>
        <newSession>false</newSession>
        <jenkinsStyleReports>true</jenkinsStyleReports>
        <routing>false</routing>
        <cobalt.users.xls.path>src/test/resources/CobaltUsers.xlsx</cobalt.users.xls.path>
    </properties>

    <profiles>
        <profile>
            <id>jenkins</id>
            <properties>
                <cobalt.users.xls.path>C:/temp/CobaltUsers.xlsx</cobalt.users.xls.path>
            </properties>
        </profile>

        <profile>
            <id>localhost</id>
            <properties>
                <base.url>localhost</base.url>
            </properties>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
        </profile>

        <profile>
            <id>CI</id>
            <properties>
                <base.url>ci</base.url>
                <base.legacy.url>124</base.legacy.url>
            </properties>
        </profile>

        <profile>
            <id>DEMO</id>
            <properties>
                <base.url>demo</base.url>
                <base.legacy.url>100</base.legacy.url>
            </properties>
        </profile>

        <profile>
            <id>QED</id>
            <properties>
                <base.url>qed</base.url>
                <base.legacy.url>100</base.legacy.url>
            </properties>
        </profile>

        <profile>
            <id>HOTPROD</id>
            <properties>
                <base.url>hotprod</base.url>
                <base.legacy.url></base.legacy.url>
            </properties>
        </profile>

        <profile>
            <id>PROD</id>
            <properties>
                <base.url>prod</base.url>
                <base.legacy.url></base.legacy.url>
            </properties>
        </profile>

        <profile>
            <id>PRODA</id>
            <properties>
                <base.url>prodA</base.url>
                <base.legacy.url></base.legacy.url>
            </properties>
        </profile>

        <profile>
            <id>PRODB</id>
            <properties>
                <base.url>prodB</base.url>
                <base.legacy.url></base.legacy.url>
            </properties>
        </profile>

        <profile>
            <id>reporting</id>
            <properties>
                <jenkinsStyleReports>true</jenkinsStyleReports>
            </properties>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.2.1</version>
                <executions>
                    <execution>
                        <phase>generate-test-resources</phase>
                        <goals>
                            <goal>java</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <mainClass>com.thomsonreuters.driver.framework.BrowserCount</mainClass>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.18</version>
                <configuration>
                    <forkCount>$SUREFIRE.FORK.COUNT$</forkCount>
                    <reuseForks>false</reuseForks>
                    <argLine>-Duser.language=en</argLine>
                    <argLine>-Xmx1024m</argLine>
                    <argLine>-XX:MaxPermSize=256m</argLine>
                    <argLine>-Dfile.encoding=UTF-8</argLine>
                    <useFile>false</useFile>
                    <includes>
                        <include>**/*Test.class</include>
                    </includes>
                    <systemPropertyVariables>
                        <base.url>$BASE.URL$</base.url>
                        <driverType></driverType>
                        <webdriver.chrome.driver></webdriver.chrome.driver>
                        <webdriver.ie.driver></webdriver.ie.driver>
                        <browserStackLocal></browserStackLocal>
                        <newSession></newSession>
                        <username>None</username>
                        <project>PLPlusUK-URLs</project>
                        <projectName>URLs</projectName>
                        <jenkinsStyleReports></jenkinsStyleReports>
                        <cobalt.users.xls.path>$COBALT.USERS.XLS.PATH$</cobalt.users.xls.path>
                        <routing></routing>
                    </systemPropertyVariables>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.apache.maven.surefire</groupId>
                        <artifactId>surefire-junit4</artifactId>
                        <version>2.18</version>
                    </dependency>
                </dependencies>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>com.thomsonreuters.pageobjects</groupId>
            <artifactId>ppiuk-pageobjects</artifactId>
            <version>LATEST</version>
        </dependency>
        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>1.9.2</version>
        </dependency>
    </dependencies>


</project>